--- a/registrationstyle.css
+++ b/registrationstyle.css
@@ -99,17 +99,16 @@ input[type=submit] {
 
 
 .footer-container{
-    background-color: black;
-    font-family: Helvetica;
-    position: bottom;
-    min-height: 10.15cm;
+  position: relative;
+  margin-top:201px;
+  clear: both;
+  background-color: black;
   }
   .footer{
     width: 80%;
     color:#72B844;
     display:inline-block;
-    height:5cm;
-    max-height: 4cm;
+   
   }
   .footer-1 h2{
     color:#72B844; 
